# ttyrpld

./: .gitignore  GNUmakefile  Makefile.am  README.txt  autogen.sh  configure.ac  etc-init.d-rpld  rpld  rpld.conf  ttyrpld.spec
buildtool/: Makefile.kmod.FreeBSD  Makefile.kmod.Linux  Makefile.kmod.NetBSD  Makefile.kmod.OpenBSD  Makefile.std.NetBSD  Makefile.std.OpenBSD  makevars.inc
doc/: GNUmakefile.am  Makefile.am  _footer.php  _header.php  changelog.txt  changes.php  desc.php  format-black.css  format-white.css  index.php  install.php  legal.php  man_rpl.5.php  man_rplctl.8.php  man_rpld.8.php  man_rpldev.4.php  man_ttyreplay.1.php  man_ttyrpld.7.php  netlog.php  printer.css  rpl.5  rpl.5.php  rplctl.8  rplctl.8.php  rpld.8  rpld.8.php  rpldev.4  rpldev.4.php  screen.css  solaris.txt  support.php  ttyreplay.1  ttyreplay.1.php  ttyrpld.7.php  ttyrpld.psp
etc/: .gitignore  Makefile.am  rpld.in
include/: dev.h  lib.h  pctrl.h  rdsh.h  rpl_endian.h  rpl_ioctl.h  rpl_packet.h  rpl_stdint.h
k_freebsd-6.1/: BSDmakefile  rpldev.c
k_freebsd-6.2/: rpldev.c  rpldhk.diff
k_freebsd-7.0/: rpldev.c
k_freebsd-8.0/: .gitignore  rpldev.c  rpldhk.diff
k_linux/: rpldev.c
k_linux-2.4/: Makefile  rpldev.c
k_linux-2.6/: .gitignore  Makefile  rpldev.c  rpldhk-2.6.31.diff  rpldhk-2.6.37.diff  rpldhk-3.3.diff  rpldhk.diff
k_netbsd-3.0/: Makefile  dev-install.sh  rpldev.c
k_netbsd-3.1/: rpldev.c  rpldhk.diff
k_netbsd-4.0/: rpldev.c
k_netbsd-5.0.1/: .gitignore  dev-install.sh  load-module.sh  rpldev.c  rpldhk.diff
k_openbsd-4.0/: rpldhk_rpldev.diff
k_openbsd-4.5/: rpldhk_rpldev.diff
k_solaris-11/: Makefile  rpldev.c  rpldhk.c  rpldhk.h
k_solaris-11/sys/: devops.h  source_version.txt  stream.h
kpatch/: freebsd-5.3.diff  freebsd-6.0.diff  freebsd-6.1.diff  freebsd-6.2.diff  linux-2.4.32.diff  linux-2.4.34.diff  linux-2.6.17.diff  linux-2.6.21.diff  netbsd-3.0.diff  netbsd-3.1.diff  openbsd-3.8.diff  openbsd-3.9.diff  openbsd-4.0.diff  solaris-11_snv39.diff
locale/: GNUmakefile.am  GNUmakefile.in  ttyrpld.pot
locale/de/LC_MESSAGES/: ttyrpld.po
locale/es/LC_MESSAGES/: ttyrpld.po
locale/fa_IR/LC_MESSAGES/: ttyrpld.po
locale/fr/LC_MESSAGES/: ttyrpld.po
locale/it/LC_MESSAGES/: ttyrpld.po
locale/nb/LC_MESSAGES/: ttyrpld.po
locale/nl/LC_MESSAGES/: ttyrpld.po
locale/sv/LC_MESSAGES/: ttyrpld.po
m4/: getpwuid.m4
m4lib/: getpwuid.m4
share/: ttyrpld.magic
user/: .gitignore  Makefile.am  compat.h  dev.h  infod.c  lib.c  lib.h  pctrl.c  pctrl.h  ptmx.c  rdsh.c  rdsh.h  replay.c  rplctl.c  rplcvt.c  rpld.c
